--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~13.3.0",
+    "@angular/cdk": "^13.3.0",
     "@angular/common": "~13.3.0",
     "@angular/compiler": "~13.3.0",
     "@angular/core": "~13.3.0",
@@ -18,7 +19,23 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "@taiga-ui/addon-charts": "^3.0.1",
+    "@taiga-ui/addon-commerce": "^3.0.1",
+    "@taiga-ui/addon-doc": "^3.0.1",
+    "@taiga-ui/addon-editor": "^3.0.1",
+    "@taiga-ui/addon-mobile": "^3.0.1",
+    "@taiga-ui/addon-preview": "^3.0.1",
+    "@taiga-ui/addon-table": "^3.0.1",
+    "@taiga-ui/addon-tablebars": "^3.0.1",
+    "@taiga-ui/cdk": "^3.0.1",
+    "@taiga-ui/core": "^3.0.1",
+    "@taiga-ui/icons": "^3.0.1",
+    "@taiga-ui/kit": "^3.0.1",
+    "@tinkoff/ng-dompurify": "^3.0.0",
+    "bootstrap": "^5.2.0",
+    "dompurify": "^2.4.0",
     "rxjs": "~7.5.0",
+    "taiga-ui": "^3.0.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
